--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: SignalDart
 version: 0.0.1
-author: Darren Reid
+author: Darren Reid <layoric@gmail.com>
 description: A package to help use SignalR JS client with Dart
+homepage: https://github.com/Layoric/SignalDart
+documentation: https://github.com/Layoric/SignalDart
 dependencies:
   async: any
   browser: any
