--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,4 +5,4 @@ description: A package to help use SignalR JS client with Dart
 homepage: https://github.com/Layoric/SignalDart
 documentation: https://github.com/Layoric/SignalDart
 dev_dependencies:
-  browser: '>=0.10.0+2 <0.11.0'
+  browser: any
